Fix comments container collapsing when clicking a textfield
The problem was that the collapse-onClick-handler was defined on the whole container and not only on the header.
Also, we now prevent the CommentsContainer from being collapsed when on mobile, it was not intended that it could be collapsed there in the first place.

--- a/projects/bp-gallery/src/views/picture/comments/CommentsContainer.scss
+++ b/projects/bp-gallery/src/views/picture/comments/CommentsContainer.scss
@@ -1,4 +1,5 @@
 @import '../../../shared/style.scss';
+@import '../shared.scss';
 
 .pictureComments {
   transition: max-height 0.5s;
@@ -10,6 +11,18 @@
 
     .picture-comments-header .MuiSvgIcon-root {
       transform: rotate(180deg);
+    }
+  }
+
+  @media only screen and (max-width: $mobile-breakpoint) {
+    max-height: unset !important;
+
+    .picture-comments-header .MuiSvgIcon-root {
+      display: none;
+    }
+
+    .picture-comments-header {
+      pointer-events: none;
     }
   }
 
